VDC_VNET_TX/VDC_VNET_TX/azuredeploy-nsg-udr.json
{
 "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "NSG700Name": {
      "type": "string",
      "defaultValue": "NSG_CSR_In_700_VDC_prod_va",
      "metadata": {
        "description": "700: CSR_In, Tier (0) Subnet for CSR for Inside in"
      }
    },
    "NSG701Name": {
      "type": "string",
      "defaultValue": "NSG_CSR_Out_701_VDC_prod_va",
      "metadata": {
        "description": "701: CSR_Out, Tier (0) Subnet for CSR for Outside"
      }
    },
    "NSG702Name": {
      "type": "string",
      "defaultValue": "NSG_CSR_Tunnel_702_VDC_prod_va",
      "metadata": {
        "description": "702: CSR_Tunnel, Tier (0) Subnet for the CSR Tunne"
      }
    },
    "NSG703Name": {
      "type": "string",
      "defaultValue": "NSG_CSR_HA_703_VDC_prod_va",
      "metadata": {
        "description": "703: CSR_HA, Tier (0) Failover subnet"
      }
    },
    "NSG704Name": {
      "type": "string",
      "defaultValue": "NSG_ER_704_VDC_Srvcs_va",
      "metadata": {
        "description": "704: ER, Tier (0) ExpressRoute Termination"
      }
    },
    "NSG101Name": {
      "type": "string",
      "defaultValue": "NSG_IntASA_In_101_VDC_prod_va",
      "metadata": {
        "description": "101: IntASA_In, Tier (0) ASA trusted inside enviro"
      }
    },
    "NSG102Name": {
      "type": "string",
      "defaultValue": "NSG_IntASA_DMZ_102_VDC_prod_va",
      "metadata": {
        "description": "102: IntASA_DMZ, Tier (0) ASA DMZ Interface"
      }
    },
    "NSG103Name": {
      "type": "string",
      "defaultValue": "NSG_IntASA_Mgmt_103_VDC_prod_va",
      "metadata": {
        "description": "103: IntASA_Mgmt, Tier (0) ASA management interfac"
      }
    },
    "NSG104Name": {
      "type": "string",
      "defaultValue": "NSG_IntASA_Out_104_VDC_prod_va",
      "metadata": {
        "description": "104: IntASA_Out, Tier (0) ASA Internet interface"
      }
    },
    "NSG106Name": {
      "type": "string",
      "defaultValue": "NSG_ExtASA_In_106_VDC_prod_va",
      "metadata": {
        "description": "106: ExtASA_In, Tier (0) ASA trusted inside enviro"
      }
    },
    "NSG107Name": {
      "type": "string",
      "defaultValue": "NSG_ExtASA_DMZ_107_VDC_prod_va",
      "metadata": {
        "description": "107: ExtASA_DMZ, Tier (0) ASA DMZ Interface"
      }
    },
    "NSG108Name": {
      "type": "string",
      "defaultValue": "NSG_ExtASA_Mgmt_108_VDC_prod_va",
      "metadata": {
        "description": "108: ExtASA_Mgmt, Tier (0) ASA management interfac"
      }
    },
    "NSG109Name": {
      "type": "string",
      "defaultValue": "NSG_ExtASA_Out_109_VDC_prod_va",
      "metadata": {
        "description": "109: ExtASA_Out, Tier (0) ASA Internet interface"
      }
    },
    "NSG111Name": {
      "type": "string",
      "defaultValue": "NSG_IntLB_111_VDC_prod_va",
      "metadata": {
        "description": "111: IntLB, Tier (0) Loadbalancer"
      }
    },
    "NSG151Name": {
      "type": "string",
      "defaultValue": "NSG_ExtLB_151_VDC_prod_va",
      "metadata": {
        "description": "151: ExtLB, Tier (0) Loadbalancer"
      }
    },
    "NSG600Name": {
      "type": "string",
      "defaultValue": "NSG_Services_600_VDC_Srvcs_va",
      "metadata": {
        "description": "600: Services, Tier (0) Used to host highly sensit"
      }
    },
    "NSG611Name": {
      "type": "string",
      "defaultValue": "NSG_LB_Services_611_VDC_Srvcs_va",
      "metadata": {
        "description": "611: LB_Services, Tier (0) Loadbalanced Services ("
      }
    },
    "NSG650Name": {
      "type": "string",
      "defaultValue": "NSG_DMZ_650_VDC_Srvcs_va",
      "metadata": {
        "description": "650: DMZ, Tier (0) Used to host public facing high"
      }
    },
    "NSG651Name": {
      "type": "string",
      "defaultValue": "NSG_LB_DMZ_651_VDC_Srvcs_va",
      "metadata": {
        "description": "651: LB_DMZ, Data Tier (0) Loadbalanced Services D"
      }
    },
    "NSG660Name": {
      "type": "string",
      "defaultValue": "NSG_User_Tier0_660_VDC_Srvcs_va",
      "metadata": {
        "description": "660: User_Tier0, Tier (0) Tier 0 - Direct Control"
      }
    },
    "NSG661Name": {
      "type": "string",
      "defaultValue": "NSG_Users_Tier1_661_VDC_Srvcs_va",
      "metadata": {
        "description": "661: Users_Tier1, Tier (1) Tier 1 administrator"
      }
    },
    "Subnet700VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.4",
      "metadata": {
        "description": "CSR_In subnet 700 adapter"
      }
    },
    "Subnet701VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.12",
      "metadata": {
        "description": "CSR_Out subnet 701 adapter"
      }
    },
    "Subnet702VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.20",
      "metadata": {
        "description": "CSR_Tunnel subnet 702 adapter"

      }
    },
    "Subnet703VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.28",
      "metadata": {
        "description": "CSR_HA subnet 703 adapter"
      }
    },
    "Subnet101VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.68",
      "metadata": {
        "description": "IntASA_Mgnt subnet 101 adapter"
      }
    },

    "Subnet102VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.76",
      "metadata": {
        "description": "IntASA_In subnet 102 adapter"
      }
    },
    "Subnet103VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.84",
      "metadata": {
        "description": "IntASA_Out subnet 103 adapter"
      }
    },
    "Subnet104VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.92",
      "metadata": {
        "description": "IntASA_DMZ subnet 104 adapter"

      }
    },
    "Subnet111VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.100",
      "metadata": {
        "description": "IntLB subnet 111 adapter"

      }
    },
    "Subnet106VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.116",
      "metadata": {
        "description": "IntASA_Mgnt subnet 106 adapter"
      }
    },
    "Subnet107VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.124",
      "metadata": {
        "description": "IntASA_In subnet 107 adapter"

      }
    },
    "Subnet108VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.132",
      "metadata": {
        "description": "IntASA_Out subnet 108 adapter"

      }
    },
    "Subnet109VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.140",
      "metadata": {
        "description": "IntASA_DMZ subnet 109 adapter"
      }
    },
    "Subnet151VNAIP": {
      "type": "string",
      "defaultValue": "10.190.0.148",
      "metadata": {
        "description": "ExtLB subnet 151 adapter"
      }
    },
    "UDR700Name": {
      "type": "string",
      "defaultValue": "UDR_700_CSR_In",
      "metadata": {
        "description": "UDR 700: CSR_In"
      }
    },
    "UDR701Name": {
      "type": "string",
      "defaultValue": "UDR_701_CSR_Out",
      "metadata": {
        "description": "UDR 701: CSR_Out"
      }
    },
    "UDR702Name": {
      "type": "string",
      "defaultValue": "UDR_701_CSR_Out",
      "metadata": {
        "description": "UDR 701: CSR_Out"
      }
    },



    "variables": {

    },

    "resources": [

      {

        "apiVersion": "2015-06-15",

        "type": "Microsoft.Network/networkSecurityGroups",

        "name": "[parameters('backEndNSGName')]",

        "location": "[resourceGroup().location]",

        "tags": {

          "displayName": "VNET_VDC_Services"

        },

        "properties": {

          "securityRules": [

            {

              "name": "HTTPS.Inbound.Allow",

              "properties": {

                "description": "HTTPS.Inbound.Allow",

                "protocol": "Tcp",

                "sourcePortRange": "443",

                "destinationPortRange": "443",

                "sourceAddressPrefix": "[parameters('subnet104Name')",

                "destinationAddressPrefix": "*",

                "access": "Allow",

                "priority": 100,

                "direction": "Inbound"

              }

            },

            {

              "name": "rdp-rule",

              "properties": {

                "description": "Allow RDP",

                "protocol": "Tcp",

                "sourcePortRange": "*",

                "destinationPortRange": "3389",

                "sourceAddressPrefix": "Internet",

                "destinationAddressPrefix": "*",

                "access": "Allow",

                "priority": 200,

                "direction": "Inbound"

              }

            },

            {

              "name": "block-internet",

              "properties": {

                "description": "Block Internet",

                "protocol": "*",

                "sourcePortRange": "*",

                "destinationPortRange": "*",

                "sourceAddressPrefix": "*",

                "destinationAddressPrefix": "Internet",

                "access": "Deny",

                "priority": 100,

                "direction": "Outbound"

              }

            }



          ]

        }

      },

      {

        "apiVersion": "2015-06-15",

        "type": "Microsoft.Network/networkSecurityGroups",

        "name": "[parameters('frontEndNSGName')]",

        "location": "[resourceGroup().location]",

        "tags": {

          "displayName": "NSG - Front End"

        },

        "properties": {

          "securityRules": [

            {

              "name": "rdp-rule",

              "properties": {

                "description": "Allow RDP",

                "protocol": "Tcp",

                "sourcePortRange": "*",

                "destinationPortRange": "3389",

                "sourceAddressPrefix": "Internet",

                "destinationAddressPrefix": "*",

                "access": "Allow",

                "priority": 100,

                "direction": "Inbound"

              }

            },

            {

              "name": "http-rule",

              "properties": {

                "description": "Allow HTTP",

                "protocol": "Tcp",

                "sourcePortRange": "*",

                "destinationPortRange": "80",

                "sourceAddressPrefix": "Internet",

                "destinationAddressPrefix": "*",

                "access": "Allow",

                "priority": 101,

                "direction": "Inbound"

              }

            },

            {

              "name": "https-rule",

              "properties": {

                "description": "Allow HTTPS",

                "protocol": "Tcp",

                "sourcePortRange": "*",

                "destinationPortRange": "443",

                "sourceAddressPrefix": "Internet",

                "destinationAddressPrefix": "*",

                "access": "Allow",

                "priority": 102,

                "direction": "Inbound"

              }

            }

          ]

        }

      },

      {

        "apiVersion": "2015-06-15",

        "type": "Microsoft.Network/routeTables",

        "name": "[parameters('backEndRouteTableName')]",

        "location": "[resourceGroup().location]",

        "tags": {

          "displayName": "Route Table - Back End"

        },

        "properties": {

          "routes": [

            {

              "name": "RouteToFrontEnd",

              "properties": {

                "addressPrefix": "[parameters('frontEndSubnetPrefix')]",

                "nextHopType": "VirtualAppliance",

                "nextHopIpAddress": "[parameters('vmaIpAddress')]"

              }

            }

          ]

        }

      },

      {

        "apiVersion": "2015-06-15",

        "type": "Microsoft.Network/routeTables",

        "name": "[parameters('frontEndRouteTableName')]",

        "location": "[resourceGroup().location]",

        "tags": {

          "displayName": "UDR - FrontEnd"

        },

        "properties": {

          "routes": [

            {

              "name": "RouteToBackEnd",

              "properties": {

                "addressPrefix": "[parameters('backEndSubnetPrefix')]",

                "nextHopType": "VirtualAppliance",

                "nextHopIpAddress": "[parameters('vmaIpAddress')]"

              }

            }

          ]

        }

      },

      {

        "apiVersion": "2015-06-15",

        "type": "Microsoft.Network/virtualNetworks",

        "name": "[parameters('vnetName')]",

        "location": "[resourceGroup().location]",

        "dependsOn": [

          "[concat('Microsoft.Network/networkSecurityGroups/', parameters('frontEndNSGName'))]",

          "[concat('Microsoft.Network/networkSecurityGroups/', parameters('backEndNSGName'))]",

          "[concat('Microsoft.Network/routeTables/', parameters('frontEndRouteTableName'))]",

          "[concat('Microsoft.Network/routeTables/', parameters('backEndRouteTableName'))]"

        ],

        "tags": {

          "displayName": "VNet"

        },

        "properties": {

          "addressSpace": {

            "addressPrefixes": [

              "[parameters('vnetPrefix')]"

            ]

          },

          "subnets": [

            {

              "name": "[parameters('dmzSubnetName')]",

              "properties": {

                "addressPrefix": "[parameters('dmzSubnetPrefix')]"

              }

            },

            {

              "name": "[parameters('frontEndSubnetName')]",

              "properties": {

                "addressPrefix": "[parameters('frontEndSubnetPrefix')]",

                "networkSecurityGroup": {

                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('frontEndNSGName'))]"

                },

                "routeTable": {

                  "id": "[resourceId('Microsoft.Network/routeTables', parameters('frontEndRouteTableName'))]"

                }

              }

            },

            {

              "name": "[parameters('backEndSubnetName')]",

              "properties": {

                "addressPrefix": "[parameters('backEndSubnetPrefix')]",

                "networkSecurityGroup": {

                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('backEndNSGName'))]"

                },

                "routeTable": {

                  "id": "[resourceId('Microsoft.Network/routeTables', parameters('backEndRouteTableName'))]"

                }

              }

            }

          ]

        }

      }

    ]

  }
